Fix for the image and text alignment on testimonials

--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -215,8 +215,8 @@ div.panel-pane div.node.node-testimonial.node-testimonial-image {
 		.pane-node-field-author-image img {
 			border-radius: 5px;
 		}
-		.pane-node-title {
-			margin-top: 0;
+		.pane-node-title h2 {
+			margin: 0;
 		}
 	}
 
